test/error/CMakeFiles/error_undefined_loop_level.dir/depend.make
# Empty dependencies file for error_undefined_loop_level.
# This may be replaced when dependencies are built.
